--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,15 @@
 }
 
 body {
-  font-family: 'Lato', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: #F4F4F7;
+  /* display: flex;
+  flex-direction: column;
+  height: 100%; */
 }
 
 h1 {
-  font-family: 'Anton', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 a.link-unstyled {
