--- a/src/components/header/HeaderCode.css
+++ b/src/components/header/HeaderCode.css
@@ -36,7 +36,7 @@
     top: 0;
     margin: auto;
     text-align: center;
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .menu-detail {
