--- a/src/components/lista/lista.css
+++ b/src/components/lista/lista.css
@@ -249,9 +249,11 @@
 }
 
 .table {
-    width:  auto !important;
+    width:  1330px !important;
     border-spacing: 0;
-    border-collapse: collapse
+    border-collapse: collapse;
+    margin-left: 10px !important;
+    margin-top: 5px;
 }
 
 .table>tbody>tr>td,
