--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:opal !important;
   background-color: #F4F4F7;
   /* display: flex;
   flex-direction: column;
@@ -16,7 +16,7 @@ body {
 }
 
 h1 {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:opal !important;
 }
 
 a.link-unstyled {
