--- a/src/components/pizarra/pizarra.css
+++ b/src/components/pizarra/pizarra.css
@@ -5,14 +5,14 @@
     .menu-bar {
         position: absolute;
         /*  bottom: 500px;*/
-        top: 143px;
-        left: 21.4%;
+       /* top: 143px;
+        left: 21.4%;*/
         /*height: 100%;*/
         /*list-style-type: none;*/
         margin: 0;
         padding: 0;
         background: #f7f7f7;
-        /* z-index:10;*/
+         /*z-index:10;*/
         overflow: hidden;
         box-shadow: 2px 0 18px rgba(0, 0, 0, 0.26);
     }
@@ -30,22 +30,27 @@
         transition: background 0.1s ease-in-out;
     }
     
-    .container {
+    #div_cont {
         bottom: 20%;
+        /*overflow: hidden;*/
+        max-width:  80%;
+        margin: auto;
+       /* z-index: 5;*/
     }
     
-    .container canvas {
+    #div_cont canvas {
+        border: 1px solid;
         background-color: #f0f0f5;
-        max-width: 80%;
-        max-height: 80%;
+        /*max-width: 80%;*/
+       /* max-height: 80%;
         width: 100%;
-        height: 100%;
-        bottom: 20%;
+        height: 100%;*/
+      /*  bottom: 20%;*/
     }
     
     .menu li a:before {
         font-family: FontAwesome;
-        speak: none;
+       
         text-indent: 0em;
         position: absolute;
         bottom: 0;
