--- a/src/components/teacher/footer/FooterContainer.css
+++ b/src/components/teacher/footer/FooterContainer.css
@@ -319,3 +319,25 @@ iframe {
 .modal-body{
     text-align: center;
 }
+.footer-distributed .footer-right .div_audio{
+    position: relative;
+    left:  30%;
+    width: auto;
+    max-width: 300px;  
+}
+
+.footer-distributed .footer-right .div_audio .div_btn{
+    border-radius: 50%;
+    width: 100px;
+    border: solid 3px;
+    height: 100px;
+    background: #fff;
+    /*margin: 100px;*/
+    position: relative;
+    left: 70%;
+    bottom: 50%;
+    cursor: pointer;
+    /*top : 0;*/
+   /* animation: ripple 1000ms infinite;
+    animation-play-state: paused;*/  
+}
