--- a/src/components/teacher/trivia/trivia.css
+++ b/src/components/teacher/trivia/trivia.css
@@ -118,11 +118,11 @@
 
 .image-container {
     display: flex;
+    height: 142px;
     width: 99%;
     padding: 12px;
     border: 3px dotted #B2BABB;
     background: #F2F4F4;
-    margin-top: 6px;
     /* Add a top margin */
     margin-bottom: 18px;
     /* Bottom margin */
