--- a/src/components/teacher/chat/test_2.css
+++ b/src/components/teacher/chat/test_2.css
@@ -3,7 +3,8 @@
 	 display: none;
 }
 #div_children {
-    transition: margin-Right .7s;
+	transition: margin-Right .7s;
+	margin-bottom: 200px;
   /*  padding: 16px;*/
 }
 
