--- a/src/components/teacher/trivia/trivia.css
+++ b/src/components/teacher/trivia/trivia.css
@@ -155,3 +155,29 @@
 .respuesta2:focus {
     border: 2px solid #000;
 }
+.modal-respuestas {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+.modal-content-respuestas {
+    color: #aaaaaa;
+    background-color: #1C2833;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    min-height: 410px;
+}
+
+.modal-body-respuestas {
+    margin: 25px;
+}
