--- a/src/components/teacher/trivia/trivia.css
+++ b/src/components/teacher/trivia/trivia.css
@@ -155,8 +155,10 @@
 .respuesta2:focus {
     border: 2px solid #000;
 }
+
+/* The Modal (background) */
+
 .modal-respuestas {
-    display: none;
     position: fixed;
     z-index: 1;
     padding-top: 100px;
@@ -180,4 +182,94 @@
 
 .modal-body-respuestas {
     margin: 25px;
+}
+
+
+/* The Close Button */
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.rolldown-list {
+    text-align: left;
+    padding: 0;
+    margin: 0;
+}
+
+.rolldown-list li {
+    padding: 12px;
+    margin-bottom: .125em;
+    display: block;
+    list-style: none;
+    font-weight: bold;
+    font-size: 20px;
+    text-transform: uppercase;
+    overflow: hidden;
+    margin-top: 10px;
+    visibility: hidden;
+    animation: rolldown .7s 1;
+    transform-origin: 50% 0;
+    animation-fill-mode: forwards;
+}
+
+.rolldown-list li:nth-child(2n) {
+    background-color: #444;
+}
+
+.rolldown-list li:nth-child(2n+1) {
+    background-color: #333;
+}
+
+.rolldown-list li:nth-child(2n+1) {
+    animation-delay: 0.25s;
+    -webkit-animation-delay: 0.25s !important;
+}
+.rolldown-list li:nth-child(2n+2) {
+    animation-delay: 0.50s;
+    -webkit-animation-delay: 0.50s !important;
+}
+.rolldown-list li:nth-child(2n+3) {
+    animation-delay: 4s;
+    -webkit-animation-delay: 0.75s !important;
+}
+.rolldown-list li:nth-child(2n+4) {
+    animation-delay: 4s;
+    -webkit-animation-delay: 1s !important;
+}
+.rolldown-list li:nth-child(2n+5) {
+    animation-delay: 4s;
+    -webkit-animation-delay: 1.25s !important;
+}
+
+#myList {
+    position: absolute;
+    width: 50%;
+    left: 50%;
+    margin-left: -25%;
+}
+
+@keyframes rolldown {
+    0% {
+        visibility: visible;
+        transform: rotateX(180deg) perspective(500px);
+    }
+    70% {
+        visibility: visible;
+        transform: rotateX(-20deg);
+    }
+    100% {
+        visibility: visible;
+        transform: rotateX(0deg);
+    }
 }
