--- a/src/view/courses/Course.sass
+++ b/src/view/courses/Course.sass
@@ -63,6 +63,7 @@
         height: calc(100vh - 50px)
         overflow-y: auto
 
+//Espacio para los cards
 .main
     max-width: 1200px
     margin: 0 auto
@@ -78,6 +79,7 @@ img
     vertical-align: middle
 
 .btn 
+//Botón para ingresar a la clase
     color: #ffffff
     padding: 0.8rem
     font-size: 14px
@@ -112,6 +114,7 @@ img
         width: 33.3333%
 
 .card_playtec 
+//Card
     background-color: white
     border-radius: 0.25rem
     box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25)
@@ -120,11 +123,13 @@ img
     overflow: hidden
 
 .card_content 
+//Todo el contenido del Curso
     padding: 1rem
     background: rgb(44,107,166)
     background: linear-gradient(90deg, rgba(44,107,166,1) 0%, rgba(44,107,166,1) 22%, rgba(0,212,255,1) 100%)
 
 .card_title 
+//Titulo del Curso
     color: #ffffff
     font-size: 1.1rem
     font-weight: 700
@@ -133,6 +138,7 @@ img
     margin: 0px
 
 .card_text 
+//Descripción del Curso
     color: #ffffff
     font-size: 0.875rem
     line-height: 1.5
