--- a/src/view/login.Stud/loginStu.sass
+++ b/src/view/login.Stud/loginStu.sass
@@ -170,10 +170,10 @@ input[type=text]
     width: 300%
     height: 100%
     background: #a64bf4
-    background: -webkit-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff)
-    background: -o-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff)
-    background: -moz-linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff)
-    background: linear-gradient(right, #21d4fd, #b721ff, #21d4fd, #b721ff)
+    background: -webkit-linear-gradient(left, #21d4fd, #b721ff, #21d4fd, #b721ff)
+    background: -o-linear-gradient(left, #21d4fd, #b721ff, #21d4fd, #b721ff)
+    background: -moz-linear-gradient(left, #21d4fd, #b721ff, #21d4fd, #b721ff)
+    background: linear-gradient(left, #21d4fd, #b721ff, #21d4fd, #b721ff)
     top: 0
     left: -100%
 
