--- a/src/view/login.Stud/ingresarCodigo.sass
+++ b/src/view/login.Stud/ingresarCodigo.sass
@@ -1,4 +1,4 @@
-
+//se cambia de color a la pagina
 @keyframes bgcolor
     0%
         background-color: #45a3e5
@@ -14,21 +14,27 @@
 
     100%
         background-color: #864cbf
-
-.ingresarCodigo-contenedor
+//contenedor principal
+.enter-code__contenedor
     -webkit-animation: bgcolor 20s infinite
     animation: bgcolor 10s infinite
     -webkit-animation-direction: alternate
     animation-direction: alternate
     height: 100vh
 
-.ingresarCodigo-ul
+.enter-code__header
     list-style-type: none
     margin: 0
     padding: 5px 30px
     overflow: hidden
 
-li .ingresarCodigo-a
+.enter-code__academy
+    float: left
+
+.enter-code__changeStudent
+    float: right
+
+.enter-code__academy-a
     display: block
     color: white
     text-align: center
@@ -36,27 +42,22 @@ li .ingresarCodigo-a
     font-size: 21px
     text-decoration: none
 
-.ocultar
-    display: none
-
-.ingresarCodigo-cuerpo
+.enter-code__body
     width: 100%
     height: 450px
     display: flex
     justify-content: center
     align-items: center
 
-.ingresarCodigo-formulario
-    height: 300px
-    width: 480px
+.enter-code__formulario
     text-align: center
 
-.ingresarCodigo-titulo-cuerpo
+.enter-code__tittle-body
     color: white
     font-weight: 700
     font-size: 2em
 
-.ingresarCodigo-input
+.enter-code__input
     position: relative
     z-index: 1
     display: inline-block
@@ -193,10 +194,10 @@ li .ingresarCodigo-a
     -webkit-transform: translate3d(-66.6%, 0, 0)
     transform: translate3d(-66.6%, 0, 0)
 
-.ingresarCodigo-cuerpo-cuerpo
+.enter-code__body-body
     margin-top: 20px
 
-.ingresarCodigo-boton
+.enter-code_button
     background: #333333
     border-style: none
 
@@ -204,10 +205,15 @@ li .ingresarCodigo-a
         background: #202020
 
 @media screen and (max-width: 700px)
-    li .ingresarCodigo-a
+    .enter-code__academy-a
         padding: 44px 1px
 
 @media screen and (max-width: 400px)
-    li .ingresarCodigo-a
+    .enter-code__academy-a
         width: 100px
         text-align: center
+
+@media screen and (max-width: 800px)
+    body span
+        float: right
+        font-size: 15px
