subiendo cambios en sass

--- a/src/view/login/login.sass
+++ b/src/view/login/login.sass
@@ -1,13 +1,10 @@
 
-
-
 .login-container
   margin-left: 10px
   .login-navbar-brand
     right: 100px
   .navbar-brand
     font-size: 21px !important
-
 
 .container-login-form
   display: flex
@@ -18,7 +15,7 @@
 .loading
   margin-left: 20%
   .nav-link
-   font-size: 15px !important
+    font-size: 15px !important
 
 .login-background
   position: absolute
@@ -32,9 +29,9 @@
     align-items: center
     height: 100%
     .card-login .form
-     min-height: 380px
+      min-height: 380px
 
-.button-google 
+.button-google
   float: left
   font-family: Roboto, arial, sans-serif
   color: #ffffff !important
@@ -51,12 +48,10 @@
   border-radius: 100px
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.25)
   transition: background-color 0.18s, border-color 0.18s, box-shadow 0.18s
-  .button-google:hover 
-  box-shadow: 0px 0px 15px 0px rgba(66, 133, 244, 0.75)
+  .button-google:hover
+    box-shadow: 0px 0px 15px 0px rgba(66, 133, 244, 0.75)
 
-
-
-.google-icon 
+.google-icon
   float: left
   border-radius: 100px
   background: #ffffff
@@ -65,17 +60,15 @@
   -webkit-transition: -webkit-transform 0.5s ease-in-out
   transition: transform 0.5s ease-in-out
 
-
-.espacio 
+.espacio
   margin-top: 20px
 
-.wrapper2 
+.wrapper2
   width: 800px
   margin: 0
   padding-bottom: 0
 
-
-.footerLogin 
+.footerLogin
   position: absolute
   bottom: 0
   left: 0px
@@ -92,18 +85,14 @@
 .card-login .form
   min-height: 380px
 
-@media (min-width: 992px) 
-  .login-navbar-expand-lg .btn-profesor 
+@media (min-width: 992px)
+  .login-navbar-expand-lg .btn-profesor
     display: none
-  
-@media (max-width: 600px) 
-  #btnVerAlumnos 
+
+@media (max-width: 600px)
+  #btnVerAlumnos
     left: 0 !important
-
-
-  #btnVerAlumnos .img-rbt 
-    width: 130px
-  
-  #btnVerAlumnos i 
-    margin: 44px 20px 0 10px !important
-  
+    .img-rbt
+      width: 130px
+    i
+      margin: 44px 20px 0 10px !important
