cambios de sass

--- a/src/view/login.Stud/ingresarCodigo.sass
+++ b/src/view/login.Stud/ingresarCodigo.sass
@@ -40,7 +40,7 @@
     text-align: center
     padding: 44px 66px
     font-size: 21px
-    text-decoration: none
+    text-decoration: none !important
 
 .enter-code__body
     width: 100%
@@ -214,6 +214,6 @@
         text-align: center
 
 @media screen and (max-width: 800px)
-    body span
+    .enter-code__input .input--kozakura
         float: right
         font-size: 15px
