--- a/src/view/index/inicio.sass
+++ b/src/view/index/inicio.sass
@@ -1,14 +1,10 @@
-html, body, #root
-    height: 100%
-    width: 100%
-    margin: 0
-    
+
 .login-contenedor
     background-image: linear-gradient(rgba(0, 0, 0, 0.75),rgba(0, 0, 0, 0.75)),url('./bg-login-teacher.webp')
     background-size: cover
     background-position: center
     background-repeat: no-repeat
-    height: 100%
+    height: 100vh
 
 .login-general
     position: absolute
@@ -141,7 +137,7 @@ html, body, #root
     color: #ffff
 
 @media screen and (max-width: 800px)
-    body
+    #root
         padding-top: 0
 
 @media (max-width: 1000px)
