--- a/src/view/login.Stud/ingresarCodigo.sass
+++ b/src/view/login.Stud/ingresarCodigo.sass
@@ -113,7 +113,7 @@
     overflow: hidden
     padding-bottom: 1em
 
-.input__field--kozakura
+.input__field--kozakuzra
     padding: .25em .5em
     margin-top: 1.25em
     width: 100%
