--- a/src/view/login/login.css
+++ b/src/view/login/login.css
@@ -56,7 +56,7 @@
   float: left;
   font-family: Roboto, arial, sans-serif;
   color: #ffffff !important;
-  background: mediumspringgreen;
+  background: #4285f4;
   min-width: 100%;
   height: 48px;
   text-align: center;
