--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -29,7 +29,7 @@ iframe
 /* Footer Center */
 
 .footer-center 
-    width: 45%
+    width: 55%
 
 
 .footer-distributed .footer-center i 
@@ -76,7 +76,7 @@ iframe
 
 .pres 
     width: 100%
-    height: 34%
+    height: 50%
     background-color: rgb(48, 135, 164)
     border: solid 2px rgb(255, 255, 255)
     color: rgb(236, 232, 232)
@@ -258,6 +258,7 @@ iframe
     right: 0
     top: 0
 
+
 .popup .btn-cerrar-popup .material-icons 
     color: #F8F8F8
     background-color: #00a8ff
@@ -296,10 +297,10 @@ iframe
     animation-play-state: paused;*/  
 
 
+   
 
 @media (min-width: 320px) and (max-width: 480px) 
     .footer-distributed 
-        background-color:#3087a4
         box-sizing: border-box
         width: 100%
         text-align: left
@@ -308,7 +309,22 @@ iframe
         position: fixed
         bottom: 0
         left: 0 
-    .miniatura 
-        width: 250px
-        height: 180px
-        font-size: 10%
+   
+    .footer-distributed .footer-left,
+    .footer-distributed .footer-center,
+    .footer-distributed .footer-right 
+        display: inline-table
+        vertical-align: top
+            
+    .pres 
+        width: 500%
+        height: 50%
+        background-color: rgb(48, 135, 164)
+        border-left-width: 10px
+        border-right-width: 10px
+    
+    .formulario
+        width: 200%
+        height: 50%
+
+  
