--- a/src/components/teacher/footer/FooterContainer.sass
+++ b/src/components/teacher/footer/FooterContainer.sass
@@ -15,12 +15,18 @@
     display: inline-block
     vertical-align: top
 
+
+
+/* Footer left */
+
 .footer-distributed .footer-left 
     width: 23%
 
+
 .footer-distributed h3 
     color: #ffffff
-    margin: 5px 10px 
+    margin: 5px 10px
+
 
 iframe 
     width: -webkit-fill-available
@@ -29,7 +35,7 @@ iframe
 /* Footer Center */
 
 .footer-center 
-    width: 55%
+    width: 45%
 
 
 .footer-distributed .footer-center i 
@@ -44,15 +50,18 @@ iframe
     margin: 10px 15px
     vertical-align: middle
 
+
 .footer-distributed .footer-center i.fa-envelope 
     font-size: 17px
     line-height: 38px
+
 
 .footer-distributed .footer-center p 
     display: inline-block
     color: #ffffff
     vertical-align: middle
     margin: 0
+
 
 .footer-distributed .footer-center p span 
     display: block
@@ -64,32 +73,40 @@ iframe
     color: #e0ac1c
     text-decoration: none
     
+
+
 .center-container
     min-height: 115px
     background-image: url("codigo.gif")
     background-size: cover
     background-position: center
 
+
 .image-code
     width: -webkit-fill-available
     height: -webkit-fill-available
 
+
 .pres 
     width: 100%
-    height: 50%
+    height: 34%
     background-color: rgb(48, 135, 164)
     border: solid 2px rgb(255, 255, 255)
     color: rgb(236, 232, 232)
     border-left-width: 10px
     border-right-width: 10px
 
+
 .pres:hover 
-    background-color: rgb(69, 157, 176);
+    background-color: rgb(69, 157, 176)
+
+
 
 /* Footer Right */
 
 .footer-distributed .footer-right 
     width: 30%
+
 
 .footer-distributed .footer-company-about 
     line-height: 20px
@@ -98,6 +115,7 @@ iframe
     font-weight: normal
     margin: 0
 
+
 .footer-distributed .footer-company-about span 
     display: block
     color: #ffffff
@@ -105,8 +123,10 @@ iframe
     font-weight: bold
     margin-bottom: 20px
 
+
 .footer-distributed .footer-icons 
     margin-top: 25px
+
 
 .footer-distributed .footer-icons a 
     display: inline-block
@@ -122,6 +142,7 @@ iframe
     margin-right: 3px
     margin-bottom: 5px
 
+
 .overlay 
     background: rgba(0, 0, 0, .3)
     position: fixed
@@ -133,6 +154,7 @@ iframe
     justify-content: center
     display: flex
     visibility: hidden
+
 
 .overlay.active 
     visibility: visible
@@ -150,17 +172,21 @@ iframe
     opacity: 0
     height: 70%
 
+
+
 .popup h3 
     font-size: 36px
     font-weight: 600
     margin-bottom: 10px
     opacity: 0
 
+
 .popup h4 
     font-size: 26px
     font-weight: 300
     margin-bottom: 40px
     opacity: 0
+
 
 /* ------------------------- */
 
@@ -170,9 +196,8 @@ iframe
 
 /* ------------------------- */
 
-    
 .btn-abrir-popup 
-    cursor: pointer
+    cursor: pointer;
 
 
 .popup.active 
@@ -192,23 +217,37 @@ iframe
     animation: entradaInputs 1s linear 1s forwards
 
 
-@keyframes entradaTitulo |
+@keyframes entradaTitulo 
     from 
         opacity: 0
         transform: translateY(-25px)
+    
     to 
         transform: translateY(0)
-        opacity: 1
+        opacity: 
     
+
 
 @keyframes entradaSubtitulo 
     from 
         opacity: 0
         transform: translateY(25px)
+    
     to 
         transform: translateY(0)
         opacity: 1
     
+
+
+@keyframes entradaInputs 
+    from 
+        opacity: 0
+    
+    to 
+        opacity: 1
+    
+
+
 .btn-back,
 .btn-next 
     width: 40px
@@ -219,6 +258,7 @@ iframe
     right: -50px
     cursor: pointer
 
+
 .btn-back,
 .btn-next 
     position: absolute
@@ -228,12 +268,13 @@ iframe
     box-shadow: none
     color: transparent
     cursor: pointer
-    line-height: 80px
+    line-height: 80px;
     margin: 0
     transform: translateY(-50%)
     width: 100px
     height: 100px
     top: 50%
+
 
 .diapo-content.active 
     width: 100%
@@ -241,10 +282,10 @@ iframe
     transform: none
     left: 0
 
+
 .btn-back i,
 .btn-next i 
-    font-size: 100px
-
+    font-size: 100
 .btn-back 
     left: -50px
 
@@ -258,11 +299,10 @@ iframe
     right: 0
     top: 0
 
-
 .popup .btn-cerrar-popup .material-icons 
     color: #F8F8F8
     background-color: #00a8ff
-    border-radius: 5px 
+    border-radius: 5px   
 
 .popup .btn-cerrar-popup .material-icons:hover 
     color: #000
@@ -281,12 +321,13 @@ iframe
     width: auto
     max-width: 300px
 
+
 .footer-distributed .footer-right .div_audio .div_btn
     border-radius: 50%
     width: 100px
     border: solid 3px
     height: 100px
-    background: #fff
+    background: #020202
     /*margin: 100px;*/
     position: relative
     left: 70%
@@ -297,7 +338,6 @@ iframe
     animation-play-state: paused;*/  
 
 
-   
 
 @media (min-width: 320px) and (max-width: 480px) 
     .footer-distributed 
@@ -309,11 +349,16 @@ iframe
         position: fixed
         bottom: 0
         left: 0 
-   
+    .footer-left
+        position: relative
+        width: 50%
+        height: 180%
+        border: solid 5px white
+
     .footer-distributed .footer-left,
     .footer-distributed .footer-center,
     .footer-distributed .footer-right 
-        display: inline-table
+        display: inline-block
         vertical-align: top
             
     .pres 
