login student listo

--- a/src/components/teacher/grupos/Grupos.sass
+++ b/src/components/teacher/grupos/Grupos.sass
@@ -1,3 +1,7 @@
+
+.cuerpo-grupos
+    text-align: center
+
 .input-text
     border: 2px solid rgba(255,255,255,.5)
     font-size: 1.75em
@@ -6,3 +10,67 @@
     border-radius: .25em
     background: transparent
     transition: all .100s
+    &:focus
+        outline: none
+        color: black
+
+.grupos-cards
+    display: flex
+    flex-wrap: wrap
+    list-style: none
+    margin: 0
+    padding: 0
+    
+.grupos-cards__item
+    display: flex
+    padding: 1rem
+.grupos-card
+    background-color: white
+    border-radius: 0.25rem
+    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25)
+    width: 100%
+    flex-direction: column
+    overflow: hidden
+    text-align: center
+    &:hover .grupos-card__image
+        -webkit-filter: contrast(100%)
+        filter: contrast(100%)
+
+.grupos-card__content
+    display: flex
+    flex: 1 1 auto
+    flex-direction: column
+    padding: 1rem
+
+.grupos-card__title
+    color: #696969
+    font-size: 1.25rem
+    font-weight: 300
+    letter-spacing: 2px
+    text-transform: uppercase
+
+.grupos-card__text
+    flex: 1 1 auto
+    font-size: 0.875rem
+    line-height: 1.5
+    margin-bottom: 1.25rem
+
+@media (min-width: 40rem)
+    .grupos-cards__item
+        width: 30%
+
+@media (min-width: 56rem)
+    .grupos-cards__item
+        width: 30%
+
+.contenedor-grupos
+    color: #999999
+    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif
+    font-style: normal
+    font-weight: 400
+    letter-spacing: 0
+    padding: 1rem
+    text-rendering: optimizeLegibility
+    -webkit-font-smoothing: antialiased
+    -moz-osx-font-smoothing: grayscale
+    -moz-font-feature-settings: "liga" on
