--- a/src/view/index/inicio.sass
+++ b/src/view/index/inicio.sass
@@ -14,8 +14,6 @@
     left: 0
     right: 0
     margin: 40px auto
-    background: #F3F3F3
-    border: 3px solid #000000
     box-sizing: border-box
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
     border-radius: 15px
@@ -40,6 +38,7 @@
     font-family: sans-serif !important
     font-size: 2em
     font-weight: bold
+    color: #ffffff
 
 .login-hijo
     background-color: yellow
