--- a/src/components/teacher/header/Empatia.sass
+++ b/src/components/teacher/header/Empatia.sass
@@ -1,6 +1,18 @@
 .menu_bar
     display: none
 
+.code-clase-detail
+    height: 100%
+    max-width: 45%
+    & h1
+        padding: 10px 0 0 15px
+        font-size: 25px
+        color: #fff
+        text-align: start
+
+#menuToggle
+    display: none
+
 header nav
     background: #3087a4
     z-index: 1000
@@ -20,7 +32,7 @@ header nav
                 color: #fff
                 display: block
                 text-decoration: none
-                padding: 20px
+                padding: 13px
 
 .nav-lista:focus
     background: #6ac3c35b
@@ -70,8 +82,111 @@ header nav ul li .caret
     top: 3px
     margin-left: 10px
     margin-right: 0px
+    
+.code
+    font-size: 15px
+    height: auto
+    width: auto
+    font-family: 'Opal'
+    text-align: centers   
+
+.codigo-generado
+    font-size: 1.75rem
+    text-align: center
+    margin: 0px 0px 8px
+    line-height: 1.2
+
+#div_children 
+    transition: margin-Right .7s
+    margin-bottom: 200px
+    padding: 12px
 
 @media screen and (max-width: 800px)
+    #menuToggle
+        display: block
+        position: absolute
+        top: 16px
+        left: 50px
+        z-index: 1
+        webkit-user-select: none
+        user-select: none      
+        a
+            text-decoration: none
+            color: #fff
+            transition: color 0.3s ease
+            &:hover
+                color: #E6344A
+        input
+            position: absolute
+            width: 40px
+            height: 32px
+            top: -2px
+            left: -3px
+            cursor: pointer
+            opacity: 0
+            z-index: 2
+            webkit-touch-callout: none
+        .hamburguesa-span  
+            float: none
+            font-size: 15px
+            display: block
+            width: 33px
+            height: 4px
+            margin-bottom: 5px
+            position: relative
+            background: #fff
+            border-radius: 3px
+            z-index: 1
+            transform-origin: 4px 0px
+            transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+            background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),opacity 0.55s ease
+    #menuToggle span:first-child
+        transform-origin: 0% 0%
+
+    #menuToggle span:nth-last-child(2)
+        transform-origin: 0% 100%
+
+    #menuToggle input:checked ~ span
+        opacity: 1
+        transform: rotate(45deg) translate(-2px, -1px)
+        background: #fff
+
+    #menuToggle input:checked ~ span:nth-last-child(3)
+        opacity: 0
+        transform: rotate(0deg) scale(0.2, 0.2)
+
+    #menuToggle input:checked ~ span:nth-last-child(2)
+        transform: rotate(-45deg) translate(0, -1px)
+
+    #menu-header
+        position: absolute
+        width: 300px
+        margin: -100px 0 0 -50px
+        padding: 50px
+        padding-top: 125px
+        background: #014e4e5b
+        transform-origin: 0% 0%
+        list-style-type: none
+        -webkit-font-smoothing: antialiased
+        transform-origin: 0% 0%
+        transform: translate(-100%, 0)
+        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
+        li
+            padding: 10px 0
+            font-size: 22px
+  
+    #menuToggle input:checked ~ ul
+        transform: none
+    
+    .code-clase-detail
+        height: 100%
+        max-width: 45%
+        & h1
+            display: none
+            padding: 10px 0 0 15px
+            font-size: 25px
+            color: #3087a4
+            text-align: start
     body
         padding-top: 80px
 
@@ -91,9 +206,18 @@ header nav ul li .caret
             font-weight: bold
             text-decoration: none
 
-        & span
-            float: right
-            font-size: 40px
+        .code
+            font-size: 15px
+            height: auto
+            width: auto
+            font-family: 'Opal'
+            text-align: centers
+        
+        .codigo-generado
+            font-size: 1.75rem
+            text-align: center
+            margin: 0px 0px 8px
+            line-height: 1.2
 
     header nav
         width: 80%
@@ -122,3 +246,159 @@ header nav ul li .caret
 
     header nav ul li .caret
         float: right
+    
+    #div_children 
+        transition: margin-Right .7s
+        margin-bottom: 200px
+        padding: 12px
+
+@media screen and (max-width: 600px)
+    #menuToggle
+        display: block
+        position: absolute
+        top: 16px
+        left: 50px
+        z-index: 1
+        webkit-user-select: none
+        user-select: none      
+        a
+            text-decoration: none
+            color: #fff
+            transition: color 0.3s ease
+            &:hover
+                color: #E6344A
+        input
+            position: absolute
+            width: 40px
+            height: 32px
+            top: -2px
+            left: -3px
+            cursor: pointer
+            opacity: 0
+            z-index: 2
+            webkit-touch-callout: none
+        .hamburguesa-span  
+            float: none
+            font-size: 15px
+            display: block
+            width: 33px
+            height: 4px
+            margin-bottom: 5px
+            position: relative
+            background: #fff
+            border-radius: 3px
+            z-index: 1
+            transform-origin: 4px 0px
+            transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0),
+            background 0.5s cubic-bezier(0.77,0.2,0.05,1.0),opacity 0.55s ease
+    #menuToggle span:first-child
+        transform-origin: 0% 0%
+
+    #menuToggle span:nth-last-child(2)
+        transform-origin: 0% 100%
+
+    #menuToggle input:checked ~ span
+        opacity: 1
+        transform: rotate(45deg) translate(-2px, -1px)
+        background: #fff
+
+    #menuToggle input:checked ~ span:nth-last-child(3)
+        opacity: 0
+        transform: rotate(0deg) scale(0.2, 0.2)
+
+    #menuToggle input:checked ~ span:nth-last-child(2)
+        transform: rotate(-45deg) translate(0, -1px)
+
+    #menu-header
+        position: absolute
+        width: 300px
+        margin: -100px 0 0 -50px
+        padding: 50px
+        padding-top: 125px
+        background: #014e4e5b
+        transform-origin: 0% 0%
+        list-style-type: none
+        -webkit-font-smoothing: antialiased
+        transform-origin: 0% 0%
+        transform: translate(-100%, 0)
+        transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0)
+        li
+            padding: 10px 0
+            font-size: 22px
+  
+    #menuToggle input:checked ~ ul
+        transform: none
+    
+    .code-clase-detail
+        height: 100%
+        max-width: 45%
+        & h1
+            display: none
+            padding: 10px 0 0 15px
+            font-size: 25px
+            color: #3087a4
+            text-align: start
+    body
+        padding-top: 80px
+
+        &
+            display: block
+            width: 100%
+            position: fixed
+            top: 0
+            background: #3087a4
+
+        & .bt-menu
+            display: block
+            padding: 20px
+            color: #fff
+            overflow: hidden
+            font-size: 25px
+            font-weight: bold
+            text-decoration: none
+
+        .code
+            font-size: 15px
+            height: auto
+            width: auto
+            font-family: 'Opal'
+            text-align: centers
+        
+        .codigo-generado
+            font-size: 1.75rem
+            text-align: center
+            margin: 0px 0px 8px
+            line-height: 1.2
+
+    header nav
+        width: 80%
+        height: calc(100% - 80px)
+        position: fixed
+        right: 100%
+        margin: 0
+        overflow: scroll
+
+    header nav ul li
+        display: block
+        border-bottom: 1px solid rgba(255, 255, 255, .5)
+
+    header nav ul li .a
+        display: block
+
+    header nav ul li:hover .children
+        display: none
+
+    header nav ul li .children
+        width: 100%
+        position: relative
+
+    header nav ul li .children li .a
+        margin-left: 20px
+
+    header nav ul li .caret
+        float: right
+    
+    #div_children 
+        transition: margin-Right .7s
+        margin-bottom: 200px
+        padding: 12px
